--- a/StringsXMLGenerator/.classpath
+++ b/StringsXMLGenerator/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="lib"/>
+	<classpathentry kind="lib" path="C:/dev/eclipseGitRepo/StringsXMLGenerator/lib/apache-httpcomponents-httpclient.jar"/>
+	<classpathentry kind="lib" path="C:/dev/eclipseGitRepo/StringsXMLGenerator/lib/http-core-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/dev/eclipseGitRepo/StringsXMLGenerator/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/dev/eclipseGitRepo/StringsXMLGenerator/lib/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
